# python-project-template

./: .gitignore  README.md  pyproject.toml
data/: .gitkeep
new_python_project/notebooks/: Dev 01 simple notebook.ipynb
new_python_project/scripts/: dev_01_simple_script.py
notes/: custom-settings.md  custom-shortcuts.md
python_project_template/dev/: dev_01_simple_script.py
python_project_template/fun_module/: hi.py
python_project_template/notebooks/: Dev 01 simple notebook.ipynb
python_project_template/scripts/: 01_simple_script.py
python_project_template/utils/: jupyter_utils.py  structlog_utils.py
