[tool.poetry]
name = "new-python-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
nbstripout = "^0.8.1"
structlog = "^24.4.0"
httpx = "^0.27.2"
duckdb = "^1.1.3"
polars = {extras = ["all"], version = "^1.14.0"}
pyarrow = "^18.0.0"
pandas = "^2.2.3"
numpy = "^2.1.3"
beautifulsoup4 = "^4.12.3"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"
ipykernel = "^6.29.5"
plotly = "^5.24.1"
dash = "^2.18.2"
itables = "^2.2.3"
black = {extras = ["jupyter"], version = "^24.10.0"}
tqdm = "^4.67.0"
python-dotenv = "^1.0.1"
scikit-learn = "^1.5.2"
nbconvert = "^7.16.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
