[tool.poetry]
name = "python-project-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
nbstripout = "^0.8.1"
structlog = "^25.4.0"
httpx = "^0.28.1"
polars = {extras = ["all"], version = "^1.31.0"}
pyarrow = "^18.1.0"
deltalake = "^1.0.2"
pandas = "^2.3.0"
numpy = "^2.3.0"
pydantic = "^2.11.7"
pydantic-settings = "^2.9.1"
ipykernel = "^6.29.5"
plotly = "^6.1.2"
itables = "^2.4.2"
black = {extras = ["jupyter"], version = "^25.1.0"}
python-dotenv = "^1.1.0"
nbconvert = "^7.16.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
